--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Any section element inside of this container is displayed as a slide -->
 <div class="slides">
         <section>
-            <h1>s40523142 學員的課程簡報</h1>
+            <h1>s40523142 蔣瑞鎮 學員的課程簡報</h1>
             <h3>The HTML Presentation Framework</h3>
             <p>
                 <small>
