--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h3>The HTML Presentation Framework</h3>
             <p>
                 <small>
-                Created by <a href="http://hakim.se">Hakim El Hattab</a> /
+                Created by <a href="s40523142">s40523142</a> /
                 <a href="http://twitter.com/hakimel">@hakimel</a>
                 </small>
             </p>
