--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <h3>The HTML Presentation Framework</h3>
             <p>
                 <small>
-                Created by <a href="s40523142">s40523142</a> /
-                <a href="http://twitter.com/hakimel">@hakimel</a>
+                Created by <a href="http://chiamingyen.github.io/kmolab/blog/tag/2016fallcp.html">s40523142</a> /
+                <a href="http://chiamingyen.github.io/kmolab/blog/tag/2016fallcp.html">s40523142</a>
                 </small>
             </p>
             <a href="blog/index.html">blog</a>
